--- a/src/layout/BaseLayout.astro
+++ b/src/layout/BaseLayout.astro
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
-    <title>Document</title>
+    <title>My blog and Art</title>
   </head>
   <body>
     <slot />
